tests/err_qty/trailing_plus.stderr
error: unexpected end of input, expected literal token
 --> tests/err_qty/trailing_plus.rs:5:16
  |
5 |     let _err = qty![1.0 m +];
  |                ^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `qty` (in Nightly builds, run with -Z macro-backtrace for more info)
